--- a/index.html
+++ b/index.html
@@ -1062,8 +1062,7 @@
                 <div class="payment-details" id="ozonPayment">
                     <h3>🟣 Ozon Bank - QR оплата</h3>
                     <div class="qr-code">
-                        <!-- Замените на реальный QR-код для Ozon Bank -->
-                       <img src="https://github.com/BlyatifulCode/Drochilnya/blob/main/qr-code_Ozon.jpg?raw=true" alt="QR-код Ozon Bank">
+                     <img src="ozon_qr.jpg" alt="QR-код Ozon Bank">
                         </div>
                     </div>
                     <div class="payment-info">
